--- a/public/includes/less/application.less
+++ b/public/includes/less/application.less
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 @import "variables.less";
 // @import "forms.less";
-// @import "reset.less";
+@import "reset.less";
 // @import "home.less";
 
 #page-welcome{
