--- a/public/views/LoginView.html
+++ b/public/views/LoginView.html
@@ -1,140 +1,63 @@
-<div class="jumbotron masthead">
-    <div class="container">
-        <div class="phone"></div>
-        <div class="intro-content">
-            <p>
-                Crave It?
-            </p>
-            <h1>SPORKIT</h1>
-            <span>Sporkit is a social dining network where great dishes are shared among friends</span>
+  <link rel="stylesheet" href="includes/stylesheets/bootstrap.css" type="text/css" /><!-- PAGE | WELCOME -->
+    <div class="pages white paralax page-welcome" id="page-welcome">
+        <div class="overlay"></div>
+        <!-- Centralized content -->
+        <div class="centralized">
+            <div class="container">
+                <div class="row-fluid">
+                    <div class="span12 center">
+                        <!-- Animated logo -->
+                        <img src="includes/images/pages/welcome/logo2.png" width="250"  alt="SerendipitUs">
+                       <!--  <div class="logo">
+                            <div class="scrollNormal">
+                                <a href="#page-work">
+                                    <img src="includes/images/pages/welcome/logo_welcome.png" width="140" height="140" alt="Treble">
+                                </a>
+                            </div>
+                            <div class="scrollDown">
+                                <a href="#page-work">
+                                    <img src="includes/images/pages/welcome/logo2_welcome.png" width="140" height="140" alt="Treble">
+                                </a>
+                            </div> 
+                        </div> -->
 
-            <ul class="masthead-links">
-                <li>
-                    <button ng-click="login()" ng-hide="isLoggedIn" class="btn btn-primary btn-lg btn-login">
-                        <i class="fa fa-facebook-square fa-lg"></i> Connect
-                    </button>
-                </li>
-            </ul>
-            <a href="http://www.apple.com/osx/apps/app-store.html" target="_blank" class="appstore">Download App</a>
-        </div><!--/intro-content-->
-    </div><!--/container-->
-</div><!--/jumbotron-->
-<div class="container marketing">
-    <div class="row">
-        <div class="col-sm-4">
-            <i class="fa fa-mobile-phone fa-6"></i>
-            <h2>Find a Dish</h2>
-            <p>
-                Take a picture of your dish and share it.
-            </p>
-        </div><!--/col-->
 
-        <div class="col-sm-4">
-            <i class="icon-spork-full fc-jumbo"></i>
-            <h2>Spork It</h2>
-            <p>
-                Spork a dish that you would like to eat.
-            </p>
-        </div><!--/col-->
+                        <!-- <div class="line-divider" id="welcome-messages"> -->
+                         <div class="line-divider">
+                            <ul class="slides">
+                                <li>
+                                    <h1>Plan a Happy Accident</h1>
+                                </li>
+                               <!--  <li>
+                                    <h1>Fresh & Clean</h1>
+                                </li>
+                                <li>
+                                    <h1>Creative & Fun</h1>
+                                </li> -->
+                            </ul>
+                        </div>
+                        <p>Connect with Facebook to get started.</p>
 
-        <div class="col-sm-4">
-            <i class="fa fa-list-alt fa-flip-horizontal fa-5"></i>
-            <h2>Make a List</h2>
-            <p>
-                Create your own customize food menu.
-            </p>
-        </div><!--/col-->
-    </div><!--/row-->
-</div><!--/marketing-->
-<div class="latest">
-    <div class="main-content container">
-        <h3>Latest dishes people are sporking</h3>
-        <div class="row-fluid">
-            <div class="col-md-4">
-                <div class="thumbnail">
-                    <small class="pull-right time-stamp"><i class="fa fa-clock-o fa-fw"></i>a min ago</small>
-                    <h4><i class="fa fa-cutlery"></i>Zak ate...</h4>
-                    <h4 class="dish-name">Kal Bi</h4>
-                    <h5><i class="fa fa-map-marker"></i><a href="#">Palace BBQ Buffet</a></h5>
-                    <address>
-                        555 El Camino Real Santa Clara, CA
-                    </address>
-                    <img src="assets/food/300x220/kalbi.jpg" class="food-photo" />
-                    <hr class="clear" />
-                </div><!--/thumbnail-->
-            </div><!--/col-->
-            
-            <div class="col-md-4">
-                <div class="thumbnail">
-                    <small class="pull-right time-stamp"><i class="fa fa-clock-o fa-fw"></i>a min ago</small>
-                    <h4><i class="fa fa-cutlery"></i>Zak ate...</h4>
-                    <h4 class="dish-name">Kal Bi</h4>
-                    <h5><i class="fa fa-map-marker"></i><a href="#">Palace BBQ Buffet</a></h5>
-                    <address>
-                        555 El Camino Real Santa Clara, CA
-                    </address>
-                    <img src="assets/food/300x220/kalbi.jpg" class="food-photo" />
-                    <hr class="clear" />
-                </div><!--/thumbnail-->
-            </div><!--/col-->
-            
-            <div class="col-md-4">
-                <div class="thumbnail">
-                    <small class="pull-right time-stamp"><i class="fa fa-clock-o fa-fw"></i>a min ago</small>
-                    <h4><i class="fa fa-cutlery"></i>Zak ate...</h4>
-                    <h4 class="dish-name">Kal Bi</h4>
-                    <h5><i class="fa fa-map-marker"></i><a href="#">Palace BBQ Buffet</a></h5>
-                    <address>
-                        555 El Camino Real Santa Clara, CA
-                    </address>
-                    <img src="assets/food/300x220/kalbi.jpg" class="food-photo" />
-                    <hr class="clear" />
-                </div><!--/thumbnail-->
-            </div><!--/col-->
-        </div><!--/row-->
-        
-        <div class="row-fluid">
-            <div class="col-md-4">
-                <div class="thumbnail">
-                    <small class="pull-right time-stamp"><i class="fa fa-clock-o fa-fw"></i>a min ago</small>
-                    <h4><i class="fa fa-cutlery"></i>Zak ate...</h4>
-                    <h4 class="dish-name">Kal Bi</h4>
-                    <h5><i class="fa fa-map-marker"></i><a href="#">Palace BBQ Buffet</a></h5>
-                    <address>
-                        555 El Camino Real Santa Clara, CA
-                    </address>
-                    <img src="assets/food/300x220/kalbi.jpg" class="food-photo" />
-                    <hr class="clear" />
-                </div><!--/thumbnail-->
-            </div><!--/col-->
-            
-            <div class="col-md-4">
-                <div class="thumbnail">
-                    <small class="pull-right time-stamp"><i class="fa fa-clock-o fa-fw"></i>a min ago</small>
-                    <h4><i class="fa fa-cutlery"></i>Zak ate...</h4>
-                    <h4 class="dish-name">Kal Bi</h4>
-                    <h5><i class="fa fa-map-marker"></i><a href="#">Palace BBQ Buffet</a></h5>
-                    <address>
-                        555 El Camino Real Santa Clara, CA
-                    </address>
-                    <img src="assets/food/300x220/kalbi.jpg" class="food-photo" />
-                    <hr class="clear" />
-                </div><!--/thumbnail-->
-            </div><!--/col-->
-            
-            <div class="col-md-4">
-                <div class="thumbnail">
-                    <small class="pull-right time-stamp"><i class="fa fa-clock-o fa-fw"></i>a min ago</small>
-                    <h4><i class="fa fa-cutlery"></i>Zak ate...</h4>
-                    <h4 class="dish-name">Kal Bi</h4>
-                    <h5><i class="fa fa-map-marker"></i><a href="#">Palace BBQ Buffet</a></h5>
-                    <address>
-                        555 El Camino Real Santa Clara, CA
-                    </address>
-                    <img src="assets/food/300x220/kalbi.jpg" class="food-photo" />
-                    <hr class="clear" />
-                </div><!--/thumbnail-->
-            </div><!--/col-->
-        </div><!--/row-->
-    </div><!--/main-content-->
-</div><!--/container-->
+                        <ul class="masthead-links">
+                            <li>
+                                <button ng-click="login()" ng-hide="isLoggedIn" class="btn btn-info btn-lg btn-login">
+                                    <i class="fa fa-facebook-square fa-lg"></i> Connect
+                              </button>
+                          </li>
+                        </ul>
+                        <a href="http://www.apple.com/osx/apps/app-store.html" target="_blank" class="appstore">Download App</a>
+
+                        <div class="social-icons sicon-white bordered">
+                            <a href="#" class="sicon-twitter"><i>Twitter</i></a>
+                            <a href="#" class="sicon-linkedin"><i>LinkedIn</i></a>
+                            <a href="#" class="sicon-youtube"><i>Youtube</i></a>
+                            <a href="#" class="sicon-pinterest"><i>Pinterest</i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- END PAGE | Welcome -->
+    <script src="includes/js/application/application.min.js" type="text/javascript"></script>
+
