--- a/public/mobile/views/toolbar.html
+++ b/public/mobile/views/toolbar.html
@@ -1,8 +1,8 @@
-<div class="toolbar" ng-controller="TopHeaderController">
+<!-- <div class="toolbar" ng-controller="TopHeaderController">
     <ul>
         <a href="#/myplate"><li><i class="icon-snack"></i>Meals Feed</li></a>
         <a href="#/takephoto"><li><i class="fa fa-camera"></i>Share</li></a>
         <a href="#/profile"><li><i class="icon-user"></i>Profile</li></a>
     </ul>
     
-</div>
+</div> -->
