--- a/public/views/HomeView.html
+++ b/public/views/HomeView.html
@@ -1,11 +1,11 @@
-<div class="navbar navbar-fixed-top navbar-inner" ng-controller="TopHeaderController">
+<!-- <div class="navbar navbar-fixed-top navbar-inner" ng-controller="TopHeaderController">
     <div class="container">
         <div class="navbar-header">
             <div class="logo">
                 <h4>Crave It?</h4>
                 <a class="navbar-brand" href="#">Spork.it</a>
-            </div></!--/logo-->
-        </div><!--/navbar-header-->
+            </div>
+        </div>
         <div class="col-xs-3 search-bar pull-right">
             <div class="input-group input-group-sm pull-right">
                 <span class="input-group-btn">
@@ -17,8 +17,8 @@
                     <button class="btn btn-warning" type="button">
                         Set
                     </button> </span>
-            </div><!--/input-->
-        </div><!--/col-->
+            </div>
+        </div>
             <div class="clearfix"></div>
             <ul class="nav nav-pills navbar-right">
                 <li>
@@ -31,5 +31,6 @@
                     <a href="#/profile"><i class="fa fa-user fa-fw"></i> Profile</a>
                 </li>
             </ul>
-    </div><!--/container-->
-</div><!--/navbar-fixed-top-->
+    </div>
+</div>
+ -->
