--- a/public/views/MyPlate.html
+++ b/public/views/MyPlate.html
@@ -1,5 +1,5 @@
 <div ng-controller="MyPlateController">
-    <div class="col-md-6 hunt-bar pull-right">
+    <!-- <div class="col-md-6 hunt-bar pull-right">
         <div class="btn-group pull-right">
             <a href="#listview" data-toggle="tab" class="btn btn-default"> <i class="fa fa-th"></i> List View </a>
             <a href="#mapview" data-toggle="tab" class="btn btn-default"> <i class="fa fa-map-marker"></i> Map View </a>
@@ -10,10 +10,10 @@
                 <button class="btn btn-warning" type="button">
                     <i class="fa fa-crosshairs fa-lg"></i>
                 </button> </span>
-        </div><!--/input-->
-    </div><!--/col-->
+        </div>
+    </div> --><!--/col-->
 
-    <h1>Meals Feed <span>What people are eating nearby</span></h1>
+   <!--  <h1>Meals Feed <span>What people are eating nearby</span></h1> -->
 
     <div class="tab-content">
         
@@ -30,21 +30,43 @@
 
 
 <div ng-repeat="food in foods">
-    <div class="col-md-4">
-        <div class="thumbnail">
-            <small class="pull-right time-stamp"><i class="fa fa-clock-o fa-fw"></i>Booked {{getFoodTime(food.createdAt)}}</small>
-            <h4><i class="fa fa-cutlery"></i>Trip to {{food.attributes.itineraryObj.HotelItineraryResponse.Itinerary.HotelConfirmation.Hotel.city}}</h4>
-            <h4 class="dish-name">{{food.attributes.itineraryObj.HotelItineraryResponse.Itinerary.HotelConfirmation.Hotel.name}}</h4>
-            <h5><i class="fa fa-map-marker"></i><a href="#"> {{food.attributes.itineraryObj.HotelItineraryResponse.Itinerary.HotelConfirmation.Hotel.address1}} </a></h5>
-            <address>
-                {{food.attributes.restaurant.location.display_address[1]}}
-            </address>
-            <img src="{{food.attributes.photo._url}}" class="food-photo" />
-            <a href="#chatModal" class="pull-right badge badge-warning" data-toggle="modal"><i class="icon-spork-half"></i> Plan a Happy Accident </a>
-            <hr class="clear" />
-        </div><!--/thumbnail-->
-    </div><!--/col-->
-</div><!--/row-->
+
+
+<a href="#chatModal" class="pull-right badge badge-warning" data-toggle="modal"><i class="icon-spork-half"></i> Plan a Happy Accident </a>
+
+
+<div class="pages page-about" id="page-about">
+        <div class="container">
+            <header>
+                <h4 class="line-divider">Your Trips</h4>
+                <div class="row">
+            </header>
+
+            <article>
+                <ul class="thumbnails about-items">
+                    <li class="span4 center">
+                         <div class="item">
+                            <img class="img-circle" src="{{food.attributes.photo._url}}" width="250" height="250"  />
+                            <div class="about-overlay img-circle">
+                                <div class="trip-info sicon-white">
+                                    <div class="trip-link" ng-repeat="parseuser in parseusers">
+                                        {{parseuser.attributes.fbUserData.first_name}}
+                                        <img class="img-profile" ng-src="http://graph.facebook.com/{{parseuser.attributes.fbUserData.id}}/picture?type=square"/>
+                                        {{parseuser.attributes.fbUserData.bio}}
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        
+                        <h5>{{food.attributes.itineraryObj.HotelItineraryResponse.Itinerary.HotelConfirmation.Hotel.city}}<br/>
+                            <small>{{food.attributes.itineraryObj.HotelItineraryResponse.Itinerary.HotelConfirmation.Hotel.name}}<br />March 10th - March 15th</small>
+                        </h5>
+                    </li> 
+                </ul>
+            </article>
+        </div>
+    </div>
+</div>
 
 
 
