--- a/public/views/MyPlate.html
+++ b/public/views/MyPlate.html
@@ -69,47 +69,31 @@
     </div>
 </div>
 
+<div class="trip-link" ng-repeat="shoppingitem in shoppingitems">
+    {{shoppingitem.summary.name}}
+    {{shoppingitem.summary.price.sale}}
+    <img src="{{shoppingitem.image[0].imageurl}}"/>
+</div>
 
-<!-- Widget -->
-<div class="widget">
-    <!-- Widget title -->
-    <div class="widget-head">
+<div class="modal fade modal-wide" id="chatModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="widget-head">
       <div class="pull-left">Chats</div>
       <div class="widget-icons pull-right">
-        <a href="#" class="wminimize"><i class="icon-chevron-up"></i></a> 
         <a href="#" class="wclose"><i class="icon-remove"></i></a>
       </div>  
       <div class="clearfix"></div>
     </div>
-
-    <div class="widget-content">
-      <!-- Widget content -->
-      <div class="padd">
-        
-        
-
-      </div>
-      <!-- Widget footer -->
-      
-    </div>
-</div> 
-
-
-<div class="modal fade modal-wide" id="chatModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <ul class="chats">
-
       <li class="by-me"  ng-repeat="message in messages" cool-fade>
         <div class="avatar pull-left">
           <img ng-src="http://www.gravatar.com/avatar/{{message.email}}?s=60&r=R&d=https://www.guardly.com/commonassets/images/img_profile_placeholder.png" class="avatar avatar-60 photo" height="60" width="60"/>
         </div>
-
         <div class="chat-content">
           <div class="chat-meta">{{message.username}} said: <span class="pull-right">3 hours ago</span></div>
           {{message.text}}
           <div class="clearfix"></div>
         </div>
       </li> 
-
       <!-- <li class="by-other">
         <div class="avatar pull-right">
           <img src="img/user.jpg" alt=""/>
