New Css for widget

--- a/public/includes/less/application.less
+++ b/public/includes/less/application.less
@@ -18,6 +18,11 @@ body{
         }
     }//end chats
     
+    .widget-head{
+        padding: 10px;
+        border-bottom: 1px solid #ddd;
+    }
+    
     form{
         padding: 25px 0 0 10px;
         border-top: 1px solid #ddd;
