--- a/public/includes/less/application.less
+++ b/public/includes/less/application.less
@@ -8,6 +8,10 @@ body{
     padding-top: 43px;
     background: #eee url('../images/pages/welcome/bg.png') 0 0 repeat !important;
 }
+.macys{text-align: center;display: block;}
+.portfolio-items .mix {display:inline-block;opacity:1;}
+.portfolio-items h4 {font-size: 10px !important;}
+.left-space {margin-left: 14%;}
 
 #chatModal{
     ul.chats{
@@ -183,6 +187,20 @@ body{
         &.thumbnails > li{
            z-index: 1999; 
            position: relative;
+           
+            small{
+                color: #999;
+            }
+            h5 {
+                position: relative;
+                
+                span{
+                    color: #d94444;
+                    font-size: 11px;
+                    margin: 0 0 0 5px;
+                    vertical-align: text-bottom;
+                }
+            }
         }
     }
     .about-items .about-overlay .trip-info{
