--- a/public/views/LoginView.html
+++ b/public/views/LoginView.html
@@ -22,18 +22,21 @@
                         </div> -->
 
 
-                        <!-- <div class="line-divider" id="welcome-messages"> -->
+                        <div class="line-divider" id="welcome-messages">
                          <div class="line-divider">
                             <ul class="slides">
                                 <li>
-                                    <h1>Plan a Happy Accident</h1>
-                                </li>
-                               <!--  <li>
-                                    <h1>Fresh & Clean</h1>
+                                <h1>Plan a happy accident.</h1>
                                 </li>
                                 <li>
-                                    <h1>Creative & Fun</h1>
-                                </li> -->
+                                    <h1>Expand your circle.</h1>
+                                </li>
+                                
+                                
+                                <li>
+                                    <h1>Make better memories.</h1>
+                                </li>
+                                
                             </ul>
                         </div>
                         <p>Connect with Facebook to get started.</p>
