--- a/public/views/MyPlate.html
+++ b/public/views/MyPlate.html
@@ -73,7 +73,7 @@
 <ul class="thumbnails plugin-filter-elements left-space portfolio-items">
     <div class="trip-link" ng-repeat="shoppingitem in shoppingitems">
     <li class="span2 mix illustration branding">
-        <a href="#pages/portfolio/project_1.html" data-destination="portfolio-items" data-insert="before">
+        <a target="_blank" href="{{shoppingitem.summary.producturl}}" data-destination="portfolio-items" data-insert="before">
             <!-- Portfolio image -->
             <img src="{{shoppingitem.image[0].imageurl}}">
             
